# elfinspect

./: README.md
elf-inspect-qt/: .cproject  .project  CMakeLists.txt  elf-inspect-qt.cpp  elf-inspect-qt.h  elf-inspect-qt.ui  main.cpp
libelfinspect/: .cproject  .project  CMakeLists.txt  buildif  libmain.cpp
